Update email domains to reflect new organizational structure and change license to Apache 2.0

--- a/.env.example
+++ b/.env.example
@@ -64,4 +64,4 @@ LOG_FORMAT="json"  # o "text" para desarrollo
 # SMTP_PORT=587
 # SMTP_USER=""
 # SMTP_PASSWORD=""
-# FROM_EMAIL="noreply@unrc.edu.ar"
+# FROM_EMAIL="noreply@unrc.edu.mx"
