--- a/.env.docker.example
+++ b/.env.docker.example
@@ -12,5 +12,5 @@ SECRET_KEY=generate_a_secure_secret_key_here
 JSEARCH_API_KEY=your_jsearch_api_key_here
 
 # pgAdmin
-PGADMIN_EMAIL=admin@unrc.edu.ar
+PGADMIN_EMAIL=admin@unrc.edu.mx
 PGADMIN_PASSWORD=change_this_admin_password
