--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ SECRET_KEY="your-super-secret-key-change-in-production"
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ALGORITHM="HS256"
 
+# Encriptación de campos sensibles (LFPDPPP compliance)
+# GENERAR ENCRYPTION_KEY segura con: python -c "from app.utils.encryption import EncryptionService; print(EncryptionService.generate_key())"
+# O usar el script: ./setup_secure.sh
+ENCRYPTION_KEY="your-encryption-key-change-in-production"
+
 # CORS - URLs permitidas para el frontend
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080", "http://localhost:5173"]
 
