--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,16 @@ ADMIN_API_KEYS=["admin-key-123-change-me"]
 COMPANY_API_KEYS=["company-key-456-change-me"]
 STUDENT_API_KEYS=["student-key-789-change-me"]
 
+# Configuración de Usuario Admin (SEGURIDAD)
+# ⚠️ IMPORTANTE: Cambiar estos valores en producción
+# Los valores vacíos desactivan la creación automática del admin
+ADMIN_DEFAULT_NAME="Admin Sistema"
+ADMIN_DEFAULT_EMAIL="admin@moirai.local"
+ADMIN_DEFAULT_PASSWORD="ChangeMeInProduction!"
+# Si INIT_DEFAULT_ADMIN=true, la app intentará crear el admin en el startup
+# Luego cambiar a false para evitar recrearlo
+INIT_DEFAULT_ADMIN=false
+
 # Configuración de logging
 LOG_LEVEL="INFO"
 LOG_FORMAT="json"  # o "text" para desarrollo
