--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ email-validator>=2.0.0
 
 # File processing
 PyPDF2>=3.0.1
+pdfplumber>=0.10.0
 pdfminer.six>=20231228
 docx2txt>=0.8
 python-magic>=0.4.27
