Add comprehensive tests for SpacyNLPService and verify bilingual support in CVExtractorV2
- Implemented a test suite for SpacyNLPService covering singleton pattern, entity extraction, tokenization, technical terms, complete analysis, semantic similarity, and performance.
- Created a script to verify bilingual support in CVExtractorV2, checking keyword dictionaries and method availability.
- Added a verification script for spaCy model cache, including memory checks, model loading, and performance simulation for bilingual requests.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Configuración de la aplicación MoirAI
 # Copie este archivo a .env y modifique los valores según su entorno
+# ⚠️ IMPORTANTE: Este archivo se genera automáticamente con ./setup_secure.sh
 
 # Configuración de la aplicación
 PROJECT_NAME="MoirAI - UNRC Job Matching Platform"
@@ -8,21 +9,21 @@ API_V1_STR="/api/v1"
 
 # Base de datos
 # Para desarrollo (SQLite)
-DATABASE_URL="sqlite:///./moirai.db"
+# DATABASE_URL="sqlite:///./moirai.db"
 # Para producción (PostgreSQL)
-# DATABASE_URL="postgresql://user:password@localhost:5432/moirai_db"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/moirai"
 
 # Seguridad (OBLIGATORIO cambiar en producción)
 # GENERAR SECRET_KEY segura con: python -c "import secrets; print(secrets.token_urlsafe(32))"
-# O usar el script: ./setup_secure.sh
-SECRET_KEY="your-super-secret-key-change-in-production"
+# O usar el script: ./setup_secure.sh (automático)
+SECRET_KEY="change_this_to_a_secure_random_key"
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ALGORITHM="HS256"
 
 # Encriptación de campos sensibles (LFPDPPP compliance)
-# GENERAR ENCRYPTION_KEY segura con: python -c "from app.utils.encryption import EncryptionService; print(EncryptionService.generate_key())"
-# O usar el script: ./setup_secure.sh
-ENCRYPTION_KEY="your-encryption-key-change-in-production"
+# GENERAR ENCRYPTION_KEY segura con: python -c "import secrets; from base64 import urlsafe_b64encode; print(urlsafe_b64encode(secrets.token_bytes(32)).decode())"
+# O usar el script: ./setup_secure.sh (automático)
+ENCRYPTION_KEY="change_this_encryption_key"
 
 # CORS - URLs permitidas para el frontend
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080", "http://localhost:5173"]
@@ -41,6 +42,14 @@ SPACY_MODEL="en_core_web_sm"
 MAX_SKILLS_EXTRACTED=30
 MAX_SOFT_SKILLS_EXTRACTED=20
 MAX_PROJECTS_EXTRACTED=20
+
+# Configuración de Vectorización de Texto
+# Límites de seguridad para proteger contra DoS
+NLP_MAX_TEXT_LENGTH=50000
+NLP_MAX_TOKEN_LENGTH=100
+NLP_MAX_VOCAB_SIZE=5000
+NLP_MAX_NGRAM_SIZE=3
+NLP_MIN_TOKEN_LENGTH=2
 
 # Privacidad y cumplimiento LFPDPPP
 DATA_RETENTION_DAYS=365
