--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ python-magic>=0.4.27
 
 # Logging and monitoring
 structlog>=23.2.0
+psutil>=5.9.0  # System and process utilities (for memory monitoring)
 
 # Development and testing
 pytest>=7.4.3
@@ -81,4 +82,6 @@ click>=8.1.7
 rich>=13.7.0
 typer>=0.9.0
 
-greenlet
+# Async database drivers and utilities
+asyncpg>=0.29.0  # Async PostgreSQL driver
+greenlet>=3.0.0  # Required by SQLAlchemy for async context switching
