--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,13 @@ ENABLE_AUDIT_LOGGING=true
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
 
+# Rate Limiting (Requests per hour)
+RATE_LIMIT_ADMIN=10000
+RATE_LIMIT_COMPANY=500
+RATE_LIMIT_STUDENT=300
+RATE_LIMIT_ANONYMOUS=50
+RATE_LIMIT_WINDOW_SECONDS=3600
+
 # API Keys para desarrollo (CAMBIAR en producción por OAuth2/JWT)
 # Genere claves seguras para cada rol
 ADMIN_API_KEYS=["admin-key-123-change-me"]
